--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -13,7 +13,7 @@
         android:padding="20dp">
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="25dp">
 
             <TextView
@@ -37,7 +37,7 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="25dp">
 
             <TextView
@@ -61,7 +61,7 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="25dp">
 
             <TextView
@@ -86,10 +86,10 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="25dp">
 
-        <TextView
+            <TextView
                 android:width="120dp"
                 android:text="Count Duration" />
 
